test/Fail/SizedTypesScopeExtrusion.err
SizedTypesScopeExtrusion.agda:21.41-42: error: [CannotSolveSizeConstraints]
Cannot solve size constraints
[x, i] ∞ ≤ i
when checking that the expression x has type Nat
